--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 16bit Snake Game</title>
+  <title>Zmija Njuvenota</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -10,19 +10,19 @@
 <!-- partial:index.partial.html -->
 <div id="wrapper">
   <!-- Header -->
-  <h1 class="snake-title">Snake</h1>
-  <p class="snake-p">Use keyboard arrows or buttons.<br><br>1. Hitting walls is a no-no.<br>2. Don't eat yourself.<br>3. Traveling backwards is a no-no too.<br>4. Everytime you fail it's faster.</p>
+  <h1 class="snake-title">Zmijka Bate</h1>
+  <p class="snake-p">Znas i sam gor dol lev a i desno.<br><br>1. izedes tacku i porastes .<br>2. Nemo izes sebe, ce dumres.<br>3. Mudja je cigan.<br>4. Avdulj loka tarabuka normalno .</p>
   <!-- Menu Container -->
 <br>
-          <p class="snake-high-score-p">High-score</p>
+          <p class="snake-high-score-p">Kuj vi je naibolji</p>
     <p class="snake-high-score">0</p>
   <div id="menu-container">
-    <button class="menu-play-button" onClick="playGame()">Play</button>
+    <button class="menu-play-button" onClick="playGame()">Igraj picko</button>
   </div>
   <!-- Game Container -->
   <div id="game-container">
   <!-- Score -->
-    <p class="snake-score-p">Score</p>
+    <p class="snake-score-p">Kuj je naibolji</p>
     <p class="snake-score">0</p>
   <!-- Canvas, the Game -->
   <canvas id="snakeGame" width="400" height="400">
@@ -37,8 +37,8 @@
   </div>
   <!-- Game Over Container -->
   <div id="game-over-container">
-    <h1 class="game-over-title">Game Over</h1>
-    <button class="game-over-play-button" onClick="playGame()">Play Again</button>
+    <h1 class="game-over-title">Kafe zale</h1>
+    <button class="game-over-play-button" onClick="playGame()">Igraj gu jopet</button>
   </div>
 </div>
 <!-- partial -->
