--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="wrapper">
   <!-- Header -->
   <h1 class="snake-title">Zmijka Bate</h1>
-  <p class="snake-p">Znas i sam gor dol lev a i desno.<br><br>1. izedes tacku i porastes .<br>2. Nemo izes sebe, ce dumres.<br>3. Mudja je cigan.<br>4. Avdulj loka tarabuka normalno .</p>
+  <p class="snake-p">Ide gas bate<br><br>1. izedes tacku i porastes .<br>2. Nemo izes sebe, ce dumres.<br>3. Mudja je cigan.<br>4. Avdulj loka tarabuka normalno .</p>
   <!-- Menu Container -->
 <br>
           <p class="snake-high-score-p">Kuj vi je naibolji</p>
