--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p class="snake-p">Ide gas bate<br><br>1. izedes tacku i porastes .<br>2. Nemo izes sebe, ce dumres.<br>3. Mudja je cigan.<br>4. Avdulj loka tarabuka normalno .</p>
   <!-- Menu Container -->
 <br>
-          <p class="snake-high-score-p">Kuj vi je naibolji</p>
+          <p class="snake-high-score-p">Skor</p>
     <p class="snake-high-score">0</p>
   <div id="menu-container">
     <button class="menu-play-button" onClick="playGame()">Igraj picko</button>
@@ -38,7 +38,7 @@
   <!-- Game Over Container -->
   <div id="game-over-container">
     <h1 class="game-over-title">Kafe zale</h1>
-    <button class="game-over-play-button" onClick="playGame()">Igraj gu jopet</button>
+    <button class="game-over-play-button" onClick="playGame()">fala za dobro</button>
   </div>
 </div>
 <!-- partial -->
