--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <!-- Game Container -->
   <div id="game-container">
   <!-- Score -->
-    <p class="snake-score-p">Kuj je naibolji</p>
-    <p class="snake-score">0</p>
+    <p class="snake-score-p">Hose Armando</p>
+    <p class="snake-score">- Fala za dobro</p>
   <!-- Canvas, the Game -->
   <canvas id="snakeGame" width="400" height="400">
 </canvas>
