--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <p class="snake-p">Ide gas bate<br><br>1. izedes tacku i porastes .<br>2. Nemo izes sebe, ce dumres.<br>3. Mudja je cigan.<br>4. Avdulj loka tarabuka normalno .</p>
   <!-- Menu Container -->
 <br>
-          <p class="snake-high-score-p">Skor</p>
-    <p class="snake-high-score">0</p>
+          <p class="snake-high-score-p">Hose Armando</p>
+    <p class="snake-high-score">Fala za dobro</p>
   <div id="menu-container">
     <button class="menu-play-button" onClick="playGame()">Igraj picko</button>
   </div>
   <!-- Game Container -->
   <div id="game-container">
   <!-- Score -->
-    <p class="snake-score-p">Hose Armando</p>
-    <p class="snake-score">- Fala za dobro</p>
+    <p class="snake-score-p">skor</p>
+    <p class="snake-score">0</p>
   <!-- Canvas, the Game -->
   <canvas id="snakeGame" width="400" height="400">
 </canvas>
